--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/doctor-list/doctor-list.css
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/doctor-list/doctor-list.css
@@ -42,6 +42,7 @@ doctor-list .doctor-spec {
 
 doctor-list .address {
     text-align: center;
+    color: gray;
 }
 
 doctor-list .additional-info {
