--- a/App/Ait.Pay.Web/Ait.Pay.Web/Views/Main/Index.cshtml
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Views/Main/Index.cshtml
@@ -40,10 +40,10 @@
                     <h5 class="white-text">ГКБ №15 имени О. М. Филатова</h5>
                     <p class="grey-text text-lighten-4">Адрес: 111539, Москва, ул. Вешняковская, 23</p>
                 </div>
-                <div class="col l4 offset-l2 s12">
+                <div class="col l4 offset-l2 s12" style="text-align: right;">
                     <h5 class="white-text">Контакты</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">+7 (499) 333-33-33</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">+7 (495) 375-71-01</a></li>
                         <li><a class="grey-text text-lighten-3" href="#!">email: gkb15@mail.ru</a></li>
                     </ul>
                 </div>
@@ -52,7 +52,7 @@
         <div class="footer-copyright">
             <div class="container">
                 © 2016 ООО "АИТ"
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                <a class="grey-text text-lighten-4 right" href="http://gkb15.com/">http://gkb15.com/</a>
             </div>
         </div>
     </footer>
