--- a/App/Ait.Pay.Web/Ait.Pay.Web/Views/Shared/_Layout.cshtml
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Views/Shared/_Layout.cshtml
@@ -11,15 +11,15 @@
 
 
     @Styles.Render("~/Content/font-awesome.css")
-    @Styles.Render("~/Content/css/select2.css")
+    @*@Styles.Render("~/Content/css/select2.css")*@
 
     @Styles.Render("~/styles")
 
-    @Styles.Render("~/Content/materialize-v0.97.5/css/materialize.css")
+    @Styles.Render("~/Content/materialize/css/materialize.css")
 
     @Scripts.Render("~/jquery")
 
-    @Scripts.Render("~/Content/materialize-v0.97.5/js/materialize.js")
+    @Scripts.Render("~/Scripts/materialize/materialize.min.js")
 
 </head>
 
