--- a/App/Ait.Pay.Web/Ait.Pay.Web/Views/Shared/_Layout.cshtml
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
 
     @*@Styles.Render("~/Content/materialize/css/materialize.css")*@
 
+    @Styles.Render("../Ait.Infrastructure.Web/styles")
+
     @Styles.Render("~/styles")
 
     @*@Scripts.Render("~/jquery")*@
@@ -36,6 +38,8 @@
     @*@Scripts.Render("~/ng")*@
 
     @Scripts.Render("../Ait.Infrastructure.Web/ng")
+
+    @Scripts.Render("../Ait.Infrastructure.Web/app")
 
     @Scripts.Render("~/app")
 
