--- a/App/Ait.Infrastructure/Ait.Infrastructure.Web/Views/Main/Index.cshtml
+++ b/App/Ait.Infrastructure/Ait.Infrastructure.Web/Views/Main/Index.cshtml
@@ -6,7 +6,7 @@
         
         <ul class="list-inline">
             <li>
-                <a href="#/home">Home</a>
+                <a href="#/home_">Home</a>
             </li>
             <li>
                 <a href="#/login">Login</a>
