--- a/App/Ait.Infrastructure/Ait.Infrastructure.Web/Views/Main/Index.cshtml
+++ b/App/Ait.Infrastructure/Ait.Infrastructure.Web/Views/Main/Index.cshtml
@@ -1,9 +1,7 @@
 ﻿
 <div class="container-fluid" ng-cloak>
-
     
-    <div class="row site-body">
-        
+    <div class="row site-body">        
         <ul class="list-inline">
             <li>
                 <a href="#/home_">Home</a>
@@ -17,8 +15,10 @@
             <li ng-hide="loggedIn">
                 <a href="#/signup">sign up</a>
             </li>
-        </ul>
-        
+            <li>
+                <a href="#/email">Email</a>
+            </li>
+        </ul>        
         
         <div ng-view>
         </div>
