--- a/App/Ait.Infrastructure/Ait.Infrastructure.Web/Views/Emails/ResetPassword.html.cshtml
+++ b/App/Ait.Infrastructure/Ait.Infrastructure.Web/Views/Emails/ResetPassword.html.cshtml
@@ -1,2 +1,9 @@
-﻿<p>Hello @ViewBag.PersonName,</p>
+﻿@section Headers {
+    To:  @ViewBag.To
+    From: @ViewBag.From
+    Subject: Reset Password
+    Views: Html
+}
+
+<p>Hello @ViewBag.PersonName,</p>
 <p>This is a message</p>
