https://github.com/andrewdavey/postal

--- a/App/Ait.Infrastructure/Ait.Infrastructure.Web/Views/Emails/ResetPassword.cshtml
+++ b/App/Ait.Infrastructure/Ait.Infrastructure.Web/Views/Emails/ResetPassword.cshtml
@@ -1,9 +1,9 @@
 ﻿@section Headers {
+
     To:  @ViewBag.To
     From: @ViewBag.From
     Subject: Reset Password
-    Views: Html
 }
 
 Hello @ViewBag.PersonName,
-This is a message
+This is a message Тут привет
