--- a/App/Ait.Infrastructure/Ait.Infrastructure.Web/Views/Emails/ResetPassword.html.cshtml
+++ b/App/Ait.Infrastructure/Ait.Infrastructure.Web/Views/Emails/ResetPassword.html.cshtml
@@ -1,9 +1,14 @@
-﻿@section Headers {
-    To:  @ViewBag.To
+﻿@section Headers {To:  @ViewBag.To
     From: @ViewBag.From
     Subject: Reset Password
-    Views: Html
 }
 
-<p>Hello @ViewBag.PersonName,</p>
-<p>This is a message</p>
+<html>
+<head>
+</head>
+<body>
+    <h2>Html</h2>
+    <p>The date is: @ViewBag.PersonName</p>
+    <p>Тут HTML</p>
+</body>
+</html>
